# DeepFashion

DeepFashion-Main/: db.sqlite3  manage.py  pyproject.toml
DeepFashion-Main/deepfashion/: asgi.py  settings.py  urls.py  wsgi.py
DeepFashion-Main/photos/: forms.py  models.py  urls.py  views.py
DeepFashion-Main/photos/migrations/: 0001_initial.py  0002_rename_user_photo_owner.py
DeepFashion-Main/photos/templates/photos/: photo_form.html  photo_list.html
DeepFashion-Main/users/: urls.py  views.py
DeepFashion-Main/users/templates/users/: login.html
