[tool.poetry]
name = "deepfashion-main"
version = "0.1.0"
description = ""
authors = ["ThinkATive <cod.ing.revolu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deepfashion_main"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
